fix: Prevent horizontal body overflow

--- a/themes/crisp/static/css/crisp.css
+++ b/themes/crisp/static/css/crisp.css
@@ -8,6 +8,11 @@
 	--bg-color: rgb(34, 34, 34);
 }
 
+body {
+	width: 100vw;
+	overflow-x: hidden;
+}
+
 * {
 	box-sizing: border-box;
 }
